# libhdbpp

./: .clang-format  .clang-tidy  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Makefile  README.md
archiving/hdb++/libhdb++/tags/release_03/src/: LibHdb++.cpp
archiving/hdb++/libhdb++/tags/release_06/: Makefile
archiving/hdb++/libhdb++/tags/release_06/src/: LibHdb++.h
archiving/hdb++/libhdb++/tags/release_07/: Makefile
archiving/hdb++/libhdb++/tags/release_09/: Makefile
archiving/hdb++/libhdb++/trunk/: Makefile
archiving/hdb++/libhdb++/trunk/src/: LibHdb++.cpp  LibHdb++.h
cmake/: LibHdb++Config.h.in  ReleaseVersion.cmake  libhdbppConfig.cmake.in
debian/: changelog  control  copyright  libhdb++-dev.install  libhdb++6-dev.install  libhdb++6.install  rules
example/libhdbpp-example/: .clang-tidy  CHANGELOG.md  CMakeLists.txt  README.md
example/libhdbpp-example/cmake/: FindLibraries.cmake  FindTango.cmake  libhdbpp-exampleConfig.cmake.in
example/libhdbpp-example/doc/: README.md
example/libhdbpp-example/src/: CMakeLists.txt  HdbppExampleDb.cpp  HdbppExampleDb.hpp  HdbppExampleDbApi.cpp  HdbppExampleDbApi.hpp
include/hdb++/: AbstractDB.h  HdbClient.h
src/: HdbClient.cpp  HdbClient.h  LibHdb++.cpp  LibHdb++.h
